--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,14 @@
 services:
   html2doc-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: html2doc:0.0.1
     container_name: html2doc-service
     restart: unless-stopped
     ports:
       - "5000:5000"
     volumes:
       - html2doc_storage:/app/tmp/storage
-    environment:
-      - SECRET_KEY=test
-      - STORAGE_PATH=/app/tmp/storage
-      - BASE_URL=http://html2doc-service:5000
-      - CONVERTER_TYPE=docx
-      - LINK_EXPIRES_DEFAULT=3600
-      - LINK_EXPIRES_MAX=86400
-      - FILE_RETENTION=600
+    env_file:
+      - .env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 30s
